Agregar cambios de estilos de imagen

--- a/practica.html
+++ b/practica.html
@@ -17,7 +17,7 @@
         la materia inerte generada como parte de procesos
         sin la intervención humana, y al fenómeno de la vida,
         que incluye también a los humanos.</p>
-    <img width="220" height="170" src="image/nat.jpg" alt="">
+    <img class="Imagen" width="220" height="170" src="image/nat.jpg" alt="">
     <img width="220" height="170"
         src="https://www.retema.es/sites/default/files/styles/imagen_contenido_ampliado/public/2022-10/naturaleza1.jpg.webp?itok=bxKSxcLt"
         alt="">
