Agregando estilos a Index

--- a/Ejercicio2 Tabla/Index.html
+++ b/Ejercicio2 Tabla/Index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/Estilo.css">
     <title>Tabla</title>
 </head>
 <body>
     <h2>HORARIO</h2>
     <table>
         <tr>
-            <th>Nombre</th>
-            <th>Edad</th>
-            <th>Carrera</th>
+            <td>Nombre</td>
+            <td>Edad</td>
+            <td>Carrera</td>
         </tr>
         <tr>
             <th>Ariadna</th>
