modificacion de estilos y contenido incluyendo las clases

--- a/Ejercicio2 Tabla/Horario.html
+++ b/Ejercicio2 Tabla/Horario.html
@@ -7,6 +7,7 @@
     <title>Horario</title>
 </head>
 <body>
+    <h1>HORARIO</h1> <br>
     <table>
         <tr>
             <td class="Cabecera">Materias</td>
@@ -18,38 +19,97 @@
         </tr>
         <tr>
             <th class="Materia">Lenguajes y Automatas</th>
-            <th></th>
-            <th></th>
+            <th class="Contenido">11:00-13:00 <br>
+                Aula: LC3 <br>
+                Profesor: Solano Hernandez Miguel Angel</th>
+            <th class="Contenido"></th>
+            <th class="Contenido">11:00-13:00 <br>
+                Aula: 4 <br>
+                Profesor: Solano Hernandez Miguel Angel</th>
+            <th class="Contenido"></th>
+            <th class="Contenido">12:00-13:00 <br>
+                Aula: RDS <br>
+                Profesor: Solano Hernandez Miguel Angel</th>
         </tr>
         <tr>
             <th class="Materia">Redes de Computadoras</th>
-            <th></th>
-            <th></th>
+            <th class="Contenido"></th>
+            <th class="Contenido"> 13:00-15:00 <br>
+                Aula: RDS <br>
+                Profesor: Sanchez Vasquez Lucia / Grupo: 6BS</th>
+            <th class="Contenido"></th>
+            <th class="Contenido"> 13:00-15:00 <br>
+                Aula: LDS <br>
+                Profesor: Sanchez Vasquez Lucia</th>
+            <th class="Contenido">16:00-17:00 <br>
+                Aula: LDS <br>
+                Profesor: Sanchez Vasquez Lucia</th>
         </tr>
         <tr>
             <th class="Materia">Programación Web</th>
-            <th></th>
-            <th></th>
+            <th class="Contenido"></th>
+            <th class="Contenido"> 17:00-19:00 <br>
+                Aula: ACS <br>
+                Profesor: Vasquez Martínez Josué Israel</th>
+            <th class="Contenido"></th>
+            <th class="Contenido">17:00-19:00 <br>
+                Aula: ACS <br>
+                Profesor: Vasquez Martínez Josué Israel</th>
+            <th class="Contenido">13:00-14:00 <br>
+                Aula: ACS <br>
+                Profesor: Vasquez Martínez Josué Israel </th>
         </tr>
         <tr>
             <th class="Materia">Taller de Sistemas Operativos</th>
-            <th></th>
-            <th></th>
+            <th class="Contenido">13:00-15:00 <br>
+                Aula: LDS <br>
+                Profesor: Cruz Perez Jorge</th>
+            <th class="Contenido"></th>
+            <th class="Contenido">13:00-15:00 <br>
+                Aula: LDS  <br>
+                Profesor: Cruz Perez Jorge</th>
+            <th class="Contenido"></th>
+            <th class="Contenido"></th>
         </tr>
         <tr>
             <th class="Materia">Administración de Bases de Datos</th>
-            <th></th>
-            <th></th>
+            <th class="Contenido"></th>
+            <th class="Contenido"> 15:00-17:00 <br>
+                Aula: RDS <br>
+                Profesor: Garcia Hernandez Hilario Vidal</th>
+            <th class="Contenido">15:00-17:00 <br>
+                Aula: LDS <br>
+                Profesor: Garcia Hernandez Hilario Vidal</th>
+            <th class="Contenido"></th>
+            <th class="Contenido">14:00-15:00 <br>
+                Aula: LDS <br>
+                Profesor: Garcia Hernandez Hilario Vidal</th>
         </tr>
         <tr>
             <th class="Materia">Lenguajes de Interfaz</th>
-            <th></th>
-            <th></th>
+            <th class="Contenido"></th>
+            <th class="Contenido"> 11:00-13:00 <br>
+                Aula: MAG 2 <br>
+                Profesor: Sanchez Vasquez Lucia</th>
+            <th class="Contenido"> 17:00-19:00 <br>
+                Aula: RDS <br>
+                Profesor: Sanchez Vasquez Lucia</th>
+            <th class="Contenido"></th>
+            <th class="Contenido"></th>
         </tr>
         <tr>
             <th class="Materia">Ingenieria de Software</th>
-            <th></th>
-            <th></th>
+            <th class="Contenido">15:00-17:00 <br>
+                Aula: LDS <br>
+                Profesor: Roman Cruz Jose Alfredo</th>
+            <th class="Contenido"></th>
+            <th class="Contenido"></th>
+            <th class="Contenido">15:00-17:00 <br>
+                Aula: LDS <br>
+                Profesor: Roman Cruz Jose Alfredo</th>
+            <th class="Contenido">15:00-16:00 <br>
+                Aula: RDS <br>
+                Profesor: Roman Cruz Jose Alfredo</th>
         </tr>
     </table>
 </body>
