--- a/Botones/Index.html
+++ b/Botones/Index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Estilos.css">
     <title>Botones</title>
-</head>
 <body>
-    <button class="Btn1">Primer boton</button>
-    <button class="Btn2">Segundo boton</button>
-    <button class="Btn3">Tercer boton</button>
+    <button class="btn1">Primer boton</button>
+    <button class="btn2">Segundo boton</button>
+    <button class="btn3">Tercer boton</button>
 </body>
 </html>
