--- a/Formularios/index.html
+++ b/Formularios/index.html
@@ -12,7 +12,7 @@
     <h1>Formulario de ejemplo</h1>
         <form action="/submit" method="post">
             <label class="lab" for="name">Nombre:</label>
-                <input type="text" id="name" name="Ariadna" required><br><br>
+                <input type="text" id="name" name="name" required><br><br>
 
             <label class="lab" for="email">Correo Electronico</label>
                 <input type="text" id="email" name="email" required><br><br>
