Agregando nuevo formulario y otros campos de bootstrap

--- a/Row-Card/Index2.html
+++ b/Row-Card/Index2.html
@@ -15,12 +15,12 @@
             <div class="col-md-10">
                 <div class="card mt-4">
             <div class="card">
-                <div style="background-color: rgb(138, 68, 145);" class="card-header">
+                <div style="background-color: rgb(15, 77, 20);" class="card-header">
                     <h6 class="text-white text-center">BTN css</h6>
                 </div>
                 <div class="card-body"><br>
-                    <button class="boton1"> boton </button><br><br><br>
-                    <button class="boton2">boton</button>
+                    <button class="boton1"> botón </button><br><br><br>
+                    <button class="boton2">botón</button>
                 </div>
                 </div>
             </div>
@@ -28,8 +28,8 @@
         <div class="col-md-2">
             <div class="card mt-4">
             <div class="card">
-                <div style="background-color: rgb(211, 154, 50);" class="card-header">
-                    <h6>BTN1</h6>
+                <div style="background-color: rgb(15, 77, 20);" class="card-header">
+                    <h6 style="color: white;">BTN1</h6>
                 </div>
                 <div class="card-body">
                     <button class="btn btn-primary">1 boton</button>
@@ -39,8 +39,8 @@
                 <div class="col-md-12">
                     <div class="card mt-4">
                     <div class="card">
-                        <div style="background-color: rgb(10, 109, 31);" class="card-header">
-                            <h6>BTN2</h6>
+                        <div style="background-color: rgb(15, 77, 20);" class="card-header">
+                            <h6 style="color: white;">BTN2</h6>
                         </div>
                         <div class="card-body">
                             <button class="btn btn-danger">2 boton</button>
@@ -57,7 +57,7 @@
             <div class="col-md-3">
                 <div class="card mt-4">
                     <div class="card">
-                        <div style="background-color: rgb(224, 158, 219);" class="card-header">
+                        <div style="background-color: rgb(125, 207, 156);" class="card-header">
                             <h6 class="text-white text-center">IMG1</h6>
                         </div>
                         <div class="card-body text-center">
@@ -71,11 +71,11 @@
             <div class="col-md-3">
                 <div class="card mt-4">
                     <div class="card">
-                        <div style="background-color: rgb(228, 158, 228);" class="card-header">
+                        <div style="background-color: rgb(125, 207, 156);" class="card-header">
                             <h6 class="text-white text-center">IMG2</h6>
                         </div>
                         <div class="card-body text-center">
-                            <img src="https://i.pinimg.com/474x/8e/de/b3/8edeb3896d80ef3e56d6fa8b822ae534.jpg" alt="" width="100px" height="100px">
+                            <img src="https://i.pinimg.com/474x/d2/97/d6/d297d6a4ed902d97ba89ef0e8168839a.jpg" alt="" width="100px" height="100px">
                         </div>
                     </div>
                 </div>
@@ -85,11 +85,11 @@
             <div class="col-md-6">
                 <div class="card mt-4">
                     <div class="card">
-                        <div style="background-color: black;" class="card-header">
+                        <div style="background-color: rgb(15, 77, 20);" class="card-header">
                             <h6 class="text-white text-center">Texto</h6>
                         </div>
                         <div class="card-body text-center">
-                            <p style="font-family: cursive; color: green; font-size: 50px;">La Naturaleza</p>
+                            <p style="font-family: cursive; color: rgb(16, 73, 16); font-size: 50px;">La Naturaleza</p>
                         </div>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
         <div class="col-md-6">
             <div class="card mt-4">
                 <div class="card">
-                    <div style="background-color: black;" class="card-header">
+                    <div style="background-color:rgb(15, 77, 20);" class="card-header">
                         <h6 class="text-white text-center">Formulario</h6>
                     </div>
                     <div class="card-body">
@@ -151,7 +151,7 @@
             <!-- Primera tarjeta -->
             <div class="card mt-4">
                 <div class="card">
-                    <div style="background-color: black;" class="card-header">
+                    <div style="background-color: rgb(125, 207, 156);" class="card-header">
                         <h6 class="text-white text-center">Información</h6>
                     </div>
                     <div class="card-body">
@@ -164,7 +164,7 @@
             <!-- Segunda tarjeta -->
             <div class="card mt-4">
                 <div class="card">
-                    <div style="background-color: black;" class="card-header">
+                    <div style="background-color: rgb(125, 207, 156);" class="card-header">
                         <h6 class="text-white text-center">Ecosistemas Marinos</h6>
                     </div>
                     <div class="card-body">
@@ -177,7 +177,7 @@
             <!-- Tercera tarjeta -->
             <div class="card mt-4">
                 <div class="card">
-                    <div style="background-color: black;" class="card-header">
+                    <div style="background-color: rgb(125, 207, 156);" class="card-header">
                         <h6 class="text-white text-center">Montañas y Vida Salvaje</h6>
                     </div>
                     <div class="card-body">
